--- a/template-optimise.html
+++ b/template-optimise.html
@@ -185,8 +185,7 @@
 																<h3 style="margin:0;">Design Column 1</h3>
 																<p
 																	style="margin:0; font-size:13px;line-height: 16px;font-weight:400;">
-																	Mandeville carneiro robbins goas ross kelly ragan
-																	rodriguez stig jordan hodgekiss merlin yeaman
+																	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
 																</p>
 															</td>
 														</tr>
@@ -221,8 +220,7 @@
 																<h3 style="margin:0;">Design Column 2</h3>
 																<p
 																	style="margin:0; font-size:13px;line-height: 16px;font-weight:400;">
-																	Mandeville carneiro robbins goas ross kelly ragan
-																	rodriguez stig jordan hodgekiss merlin yeaman
+																	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
 																</p>
 															</td>
 														</tr>
@@ -262,9 +260,9 @@
 						<td align="center" valign="top" style="padding:5px 10px 0px 10px;font-size:12px;color:#999999;line-height:14px;"
 							border="0">
 							<p>
-							<a href="http://litmus.com" style="color: #999999;" target="_blank">View Online</a>
+							<a href="https://jamesleedev.com/" style="color: #999999;" target="_blank">View Online</a>
 							&nbsp; • &nbsp;
-							<a href="http://litmus.com" style="color: #999999;" target="_blank">Unsubscribe</a>
+							<a href="https://jamesleedev.com/" style="color: #999999;" target="_blank">Unsubscribe</a>
 							</p>
 						</td>
 					</tr>
